--- a/if문제/if문제1.html
+++ b/if문제/if문제1.html
@@ -11,10 +11,7 @@
     <script>
         "use strict"
 
-        /*
-        문제 1
-        유저가 입력하는 숫자가 0인지 음성인지 양성인지 판단하는 프로그램을 만드시오
-        */
+        // 유저가 입력하는 숫자가 0인지 음성인지 양성인지 판단하는 프로그램을 만드시오
 
         const a = prompt("숫자를 입력하세요","0")
         if(0 == a){
