--- a/if문제/if1.html
+++ b/if문제/if1.html
@@ -12,6 +12,7 @@
 
         // 유저가 입력하는 숫자가 0인지 음성인지 양성인지 판단하는 프로그램을 만드시오
 
+        /*
         const a = prompt("숫자를 입력하세요","0")
         if(0 == a){
            alert("0입니다")
@@ -21,6 +22,17 @@
             alert("음성입니다")
         } else {
             alert("취소했습니다")
+        }
+        */
+
+        let number = -1
+
+        if(number<0){
+        console.log("음성입니다")
+        }else if(number > 0){
+        console.log("양성입니다")
+        }else {
+        console.log("0입니다")
         }
     </script>
 </body>
