--- a/if문제/if2.html
+++ b/if문제/if2.html
@@ -20,6 +20,7 @@
         less than 59 : F
         */
 
+        /*
         const a = prompt("점수를 입력하세요.","0")
 
         if(90<=a && a<=100){
@@ -35,6 +36,24 @@
         } else {
             alert("0에서 100사이로 입력하세요.")
         }
+        */
+
+        let score =  90
+        let grade =''
+        if(90<=score && score<=100){
+        grade = "A"
+        }else if(80<=score && score<=89){
+        grade = "B"
+        }else if(70<=score && score<=79){
+        grade ="C"
+        }else if(60<=score && score<=69){
+        grade="D"
+        }else if(0<=score && score<=59){
+        grade="F"
+        }else {
+        console.log("잘못된 범위의 점수입니다")
+        }
+        console.log(grade)
     </script>
 </body>
 </html>
