--- a/반복문제/for1.html
+++ b/반복문제/for1.html
@@ -10,9 +10,19 @@
     <script>
         "use strict"
 
+        // 1부터 100까지 더하는 for문을 만들고 결과를 출력하시오.
+
+        /*
         for(let i=1;i<=100;i++){
             console.log(i)
         }
+        */
+
+        let sum = 0
+        for(let i=1;i<=100;i++){
+        sum+=i
+        }
+        console.log(sum)
     </script>
 </body>
 </html>
