--- a/반복문제/for2.html
+++ b/반복문제/for2.html
@@ -12,8 +12,14 @@
 
         // 1부터 100까지 홀수만 출력하자.
         
+        /*
         for(let i=1;i<=100;i++){
             if(i%2)
+            console.log(i)
+        }
+        */
+
+        for(let i=1;i<=100;i+=2){
             console.log(i)
         }
     </script>
