--- a/반복문제/for4.html
+++ b/반복문제/for4.html
@@ -13,6 +13,7 @@
         // 주어진 숫자가 소수이면 true 아니면 false를 출력하는 프로그램을 짜시오.
         
         for(let i=1;i<=7;i++){
+            console.log(i)
         }
     </script>
 </body>
