--- a/반복문제/for3.html
+++ b/반복문제/for3.html
@@ -13,6 +13,14 @@
         // 1부터 50까지 369결과를 프린트하자.
         
         for(let i=1;i<=50;i++){
+        let stringValue = i.toString()
+        let result = ""
+        for(let j=0;j<stringValue.length;j++){
+            if(stringValue[j] == "3" ||stringValue[j] == "6" ||stringValue[j] == "9" ){
+            result+="짝"
+            }
+        }
+        console.log(result.length>0?result:i)
         }
     </script>
 </body>
